canary-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress-without-traffic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: route
spec:
  ingressClassName: nginx
  rules:
  - host: my.kubernetes.example
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: canary-v1-service
            port:
              number: 8000
